[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rust-py-cache"
version = "0.1.3"
description = "An ultra-fast local cache for Python, powered by Rust."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Roberto Lima", email = "robertolima.izphera@gmail.com" }]
keywords = ["cache", "rust", "pyo3", "ttl", "performance"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/robertolima/rust-py-cache"

[tool.maturin]
# Projeto "misto": código Python em python/ + módulo nativo compilado do Rust.
python-source = "python"
# Compila o .so como submódulo nativo dentro do pacote Python.
module-name = "rust_py_cache._rust_py_cache"
# Gera wheel abi3 (uma wheel para 3.10+).
features = ["pyo3/extension-module"]
